--- a/Ubiquitous2/App.xaml
+++ b/Ubiquitous2/App.xaml
@@ -7,7 +7,7 @@
              xmlns:settings="clr-namespace:UB.Properties"
              xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent" x:Class="UB.App"
     
-             StartupUri="MainWindow.xaml"
+             StartupUri="\View\MainWindow.xaml"
              mc:Ignorable="d">
     
     <Application.Resources>
