--- a/Ubiquitous2/View/SettingsChatItemView.xaml
+++ b/Ubiquitous2/View/SettingsChatItemView.xaml
@@ -10,6 +10,7 @@
              xmlns:gif="http://wpfanimatedgif.codeplex.com"
              DataContext="{Binding Source={StaticResource Locator},Path=SettingsChatItem}"
              mc:Ignorable="d"
+             Focusable="False"
              d:DesignHeight="31.433" d:DesignWidth="184.566">
 
     <UserControl.Resources>
