--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -14,10 +14,10 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type UserControl}">
                     <Grid>              
-                        <ItemsControl ItemsSource="{Binding Messages}" Padding="0" Margin="0,0,-4,0">
+                        <ItemsControl Focusable="False" ItemsSource="{Binding Messages}" Padding="0" Margin="0,0,-4,0">
                             <ItemsControl.Template>
                                 <ControlTemplate>
-                                    <ScrollViewer d:DesignHeight="200" d:DesignWidth="500"  Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
+                                    <ScrollViewer Focusable="False" d:DesignHeight="200" d:DesignWidth="500"  Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
                                         <i:Interaction.Triggers>
                                             <Interactivity:DataEventTrigger EventName="MessageAdded" d:EventName="">
                                                 <Interactivity:AutoScrollAction Duration="100" EnableAutoScroll="{Binding EnableAutoScroll}"/>
