--- a/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
@@ -12,7 +12,7 @@
                 <ControlTemplate TargetType="{x:Type UserControl}">                    
                     <ControlTemplate.Resources>
                         <Style x:Key="{x:Type Hyperlink}" TargetType="{x:Type Hyperlink}">
-                            <Setter Property="TextDecorations" Value="Underline"/>
+                            <Setter Property="TextDecorations" Value="None"/>
                             <Setter Property="Foreground" Value="#FFCB972F"/>
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
@@ -36,7 +36,7 @@
                             <Setter Property="Stretch" Value="Fill"/>
                         </Style>
                     </ControlTemplate.Resources>
-                    <Border CornerRadius="10" Margin="1,0,1,5" BorderThickness="0,0,1,1" Padding="3,0,3,8">
+                    <Border Focusable="False" CornerRadius="10" Margin="1,0,1,5" BorderThickness="0,0,1,1" Padding="3,0,3,8">
                         <Border.CacheMode>
                             <BitmapCache/>
                         </Border.CacheMode>
@@ -54,18 +54,22 @@
                                 <RowDefinition Height="18"/>
                                 <RowDefinition MinHeight="18"/>
                             </Grid.RowDefinitions>
-                            <DockPanel Grid.Row="0" HorizontalAlignment="Stretch">
-                                <Image gif:ImageBehavior.AnimatedSource="{Binding Message.ChatIconURL, Mode=OneTime}" gif:ImageBehavior.RepeatBehavior="Forever" Stretch="Fill" Margin ="0,4,0,0" Width="12" Height="12" VerticalAlignment="Top" HorizontalAlignment="Left">
+                            <DockPanel Focusable="False" Grid.Row="0" HorizontalAlignment="Stretch">
+                                <Image Focusable="False" gif:ImageBehavior.AnimatedSource="{Binding Message.ChatIconURL, Mode=OneTime}" gif:ImageBehavior.RepeatBehavior="Forever" Stretch="Fill" Margin ="2,3,0,0" Width="12" Height="12" VerticalAlignment="Top" HorizontalAlignment="Left">
                                 <Image.Effect>
                                         <DropShadowEffect BlurRadius="2" Opacity="0.2" ShadowDepth="2"/>
                                     </Image.Effect>
                                 </Image>
-                                <TextBox FontSize="11" Text="{Binding Message.Channel}" Margin="1,0,0,0" Foreground="#FFCB972F" HorizontalAlignment="Left" FontWeight="Bold"/>
-                                <TextBox FontSize="11" Text="{Binding Message.FromUserName}" Margin="0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold"/>
-                                <TextBox Text="{Binding Message.TimeStamp}" FontSize="10" Foreground="#FFD69B33" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,1,0,0" FontWeight="Bold"/>
+                                <TextBlock Focusable="False">
+                                    <Hyperlink Focusable="False" Command="{Binding SetActiveChannel}" Cursor="Hand">
+                                        <TextBlock Focusable="False" FontSize="11" Text="{Binding Message.Channel}" Margin="3,1,0,0" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                    </Hyperlink>
+                                </TextBlock>
+                                <TextBox Focusable="False"  FontSize="11" Text="{Binding Message.FromUserName}" Margin="0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                <TextBox Focusable="False" Text="{Binding Message.TimeStamp}" FontSize="10" Foreground="#FFD69B33" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,1,0,0" FontWeight="Bold"/>
                             </DockPanel>
-                            <Border Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" Background="#FF303030" BorderThickness="0" Padding="1,2,1,0" Margin="0,0,0,-8">
-                                <TextBlock TextAlignment="Justify" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="14" Foreground="#FFCDCDCD" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}"  UseLayoutRounding="True">
+                            <Border Focusable="False" Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" Background="#FF303030" BorderThickness="0" Padding="2,1" Margin="0,0,0,-9">
+                                <TextBlock Focusable="False" TextAlignment="Justify" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="14" Foreground="#FFCDCDCD" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}"  UseLayoutRounding="True">
                                 </TextBlock>
                             </Border>
                         </Grid>
