main window design

--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -3,12 +3,16 @@
                     xmlns:ubview="clr-namespace:UB.View"
                     xmlns:ubviewmodel="clr-namespace:UB.ViewModel"
                     xmlns:Interactivity="clr-namespace:UB.Interactivity"
+                    xmlns:Converter="clr-namespace:UB.Converter"
                     xmlns:dc="clr-namespace:Devart.Controls"            
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                     mc:Ignorable="d" 
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+
+
+    <Converter:BoolToScrollBarVisibility x:Key="boolToScrollVisibility"></Converter:BoolToScrollBarVisibility>
     <Style x:Key="ChatBoxStyle" TargetType="{x:Type UserControl}">
         <Setter Property="Template">
             <Setter.Value>
@@ -17,8 +21,8 @@
                         <ItemsControl Focusable="False" ItemsSource="{Binding Messages}" Padding="0" Margin="0,0,-4,0">
                             <ItemsControl.Template>
                                 <ControlTemplate>
-                                    <ScrollViewer Focusable="False" d:DesignHeight="200" d:DesignWidth="500"  Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
-                                        <i:Interaction.Triggers>
+                                    <ScrollViewer VerticalScrollBarVisibility="{Binding IsScrollBarVisible, Converter={StaticResource boolToScrollVisibility}}" Focusable="False" d:DesignHeight="200" d:DesignWidth="500"  Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
+                                            <i:Interaction.Triggers>
                                             <Interactivity:DataEventTrigger EventName="MessageAdded" d:EventName="">
                                                 <Interactivity:AutoScrollAction Duration="100" EnableAutoScroll="{Binding EnableAutoScroll}"/>
                                             </Interactivity:DataEventTrigger>
@@ -32,7 +36,7 @@
                             </ItemsControl.Template>
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                        <dc:SmoothPanel TrackTopMost="false" VirtualizingPanel.CacheLength="5" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
+                                    <dc:SmoothPanel TrackTopMost="false" VirtualizingPanel.CacheLength="5" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
                                             <dc:SmoothPanel.Templates>
                                                 <dc:SmoothPanelTemplate ViewModel="{x:Type ubviewmodel:ChatMessageViewModel}" View="{x:Type ubview:ChatMessageView}" />
                                             </dc:SmoothPanel.Templates>
