--- a/Ubiquitous2/View/MainWindow.xaml
+++ b/Ubiquitous2/View/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:ignore="http://www.ignore.com"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:Custom="http://www.galasoft.ch/mvvmlight"
+        xmlns:Settings="clr-namespace:UB.Properties"
         x:Class="UB.MainWindow"
         mc:Ignorable="d ignore"
         UseLayoutRounding="True"
-        Height="425"
-        Width="324"
+        Height="{Binding Source={x:Static Settings:Ubiqiutous.Default}, Path=MainWindowHeight}"
+        Width="{Binding Source={x:Static Settings:Ubiqiutous.Default}, Path=MainWindowWidth}"
         Title="Ubiquitous 2.0"   
         Style="{DynamicResource MainWindowStyle}"
         xmlns:Interactivity="clr-namespace:UB.Interactivity"
