--- a/Ubiquitous2/View/MainWindow.xaml
+++ b/Ubiquitous2/View/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:Custom="http://www.galasoft.ch/mvvmlight"
         xmlns:Settings="clr-namespace:UB.Properties"
-        x:Class="UB.MainWindow"
+        x:Class="UB.MainWindow"        
         mc:Ignorable="d ignore"
         UseLayoutRounding="True"
         Height="{Binding Source={x:Static Settings:Ubiqiutous.Default}, Path=MainWindowHeight,Mode=TwoWay}"
@@ -15,6 +15,7 @@
         Style="{DynamicResource MainWindowStyle}"
         xmlns:Interactivity="clr-namespace:UB.Interactivity"
         WindowStyle="None"
+        Topmost="True"
         AllowsTransparency="True"        
         DataContext="{Binding Source={StaticResource Locator},Path=Main}" 
         Background="{x:Null}" 
